2012-04-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_memberlist): Add
	TRANSLATORS comment.
	(grub_diskfilter_print_partmap): Propagate changing of error into
	warning.

2012-04-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/diskfilter.h (grub_diskfilter_vg): Increase extent_size
	to uint64_t to prevent overflow.
	(grub_diskfilter_lv): Increase start_extent and extent_count
	to uint64_t to prevent overflow.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Increase version.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Introduce en@cyrillic en@hebrew en@arabic and en@greek.

	* po/Rules-translit: New file.
	* po/arabic.sed: Likewise.
	* po/cyrillic.sed: Likewise.
	* po/greek.sed: Likewise.
	* po/hebrew.sed: Likewise.
	* po/README: Add en@cyrillic en@hebrew en@arabic and en@greek.
	* po/Makefile.in.in: Add extra_dist4.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle big-endian minixfs (fixes minixfs tests on bigendian).

	* grub-core/fs/minix.c: Replace le with minix. Add necessary defines,
	modify names. Introduce MODE_BIGENDIAN.
	* grub-core/fs/minix_be.c: New file.
	* grub-core/fs/minix2_be.c: Likewise
	* grub-core/fs/minix3_be.c: Likewise.
	* Makefile.util.def (libgrubmods): Add minix_be, minix2_be and
	minix3_be.
	* grub-core/Makefile.core.def (minix_be): New module.
	(minix2_be): Likewise.
	(minix3_be): Likewise.

2012-04-01  Felix <email@hamburg.de>

	* grub-core/loader/efi/appleloader.c (devpath_7): New var.
	(devs): Add MBP 2011.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/font/font.c (blit_comb): Handle dagesh somewhat.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/cmdline.c (print_completion): New field
	prompt_len.
	(grub_cmdline_get): Handle width properly.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/lsacpi.c (options): Add missing terminator.
